--- a/Change_color_Shape/style.css
+++ b/Change_color_Shape/style.css
@@ -30,8 +30,8 @@ body{
 
 
   #circle{
-      height:190px;
-      width:190px;
+      height:230px;
+      width:230px;
       border-radius:50%;
       background-color:purple;
       box-sizing: border-box;
@@ -45,7 +45,8 @@ body{
       width: 100px;
       height: 100px;
       left:45px;
-      top:40px;
+      top:60px;
+      left: 60px;
       transition:all 0.6s ease-in-out;
   
   }
@@ -59,4 +60,41 @@ body{
     left: 45px; 
     top: 45px; 
     transition: all 0.6s ease-in-out;
+}
+.Ssquare{
+    width: 120px;
+    height: 120px;
+    left: 55px;
+    top: 60px;
+    background-color: yellow;
+    transition:all 0.6s ease-in-out;
+
+}
+.Scircle{
+    width: 120px;
+    height: 120px;
+    left: 55px;
+    top: 55px;
+    background-color: red;
+    border-radius: 50%;
+    transition:all 0.6s ease-in-out;
+}
+.Shexagon{
+    rotate: 90deg;
+    width: 120px;
+    height: 120px;
+    left: 55px;
+    top: 50px;
+    background-color: yellowgreen;
+    border-radius: 5px;
+    clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+    transition:all 0.6s ease-in-out;
+}
+.Srectangle{
+    width: 150px;
+    height: 120px;
+    top: 60px;
+    background-color: pink;
+    border-radius: 5px;
+    transition:all 0.6s ease-in-out;
 }
