--- a/Key_board/style.css
+++ b/Key_board/style.css
@@ -6,10 +6,10 @@
 }
 body {
   height: 100vh;
-  background: linear-gradient(#2887e3 50%, #16191e 50%);
+  background: linear-gradient(#e328287b 50%, #8b95a5 50%);
 }
 #result {
-  background-color: #242831;
+  background-color: #000000;
   width: 80vw;
   max-width: 600px;
   position: absolute;
@@ -21,7 +21,7 @@ body {
   color: #f5f5f5;
   font-size: 3.6vmin;
   border-radius: 10px;
-  box-shadow: 0 10px 50px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 1000px 10px rgb(255, 255, 255);
   font-style: italic;
 }
 #result span:nth-child(1) {
